# meridianpathfinder

./: .env.example  .gitignore  03_dapt618_hw_2.ipynb  CLAUDE.md  DEPLOYMENT.md  DGX_SPARK_DEPLOYMENT_GUIDE.md  HANDOFF.md  PRODUCTION_CHECKLIST.md  README.md  data_cleaned.csv  data_mode2.csv  data_quality_report.json  deploy-local.sh  hw8_11.R  hw8_11.qmd  meridian.service  meridian.yaml  meridian_sglang_config.md  patch_phase_branch_wiring.py  pyproject.toml  simple_test_server.py  start_local_deployment.sh  start_local_test_server.py  start_mock_sglang.py  start_mock_sglang_simple.py  start_sglang_server.sh  start_sglang_speculative.sh  test_end_to_end.py  test_full_stack.py  test_healer.py  test_meridian_llm.py  test_openai_connection.py  test_phase1_complete.py  test_phase2_complete.py  test_phase2_simple.py  test_phase3_complete.py  test_semicolon.csv  test_sglang_connection.py  test_spark_deployment.py  test_speculative_performance.py  (+1 more)
.meridian/: circuit_breaker.json  fingerprints.db  healer_cache.json  state.json
PROJECT/: README.md  demo.py
backend/: main.py
dashboard/: Dockerfile  UI_UX.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
deploy/: DEPLOYMENT_GUIDE.md  DGX_DEPLOYMENT_COMPLETE.md  Dockerfile.api  deploy-full-stack.sh  deploy-to-dgx.sh  deploy-to-spark.sh  docker-compose.dgx.yml  env.template  llm_router.py  meridian-dgx.yaml  start-models.sh
dgx-inference/: Dockerfile  README.md  docker-compose.yml  env.template  requirements.txt
docs/: API.md  ARTIFACTS.md  LLM_PROVIDERS.md  ML_INTEGRATION.md  (+1 more)
(+297 files in other folders)
